tests-integration/tests/roundtrip/invalid/semantic/multiple_errors/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/multiple_errors/03/input.essence:13:10:
   |
13 | find k : E)
   |          ^
Error: Symbol not found "E"

tests/roundtrip/invalid/semantic/multiple_errors/03/input.essence:13:11:
   |
13 | find k : E)
   |           ^
Unexpected )

